# flash_games_revived

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  flash_games_revived-e5e82ae764f1df0.js  flash_games_revived-e5e82ae764f1df0_bg.wasm  styles-ddf6dbccf3aeb9fe.css
.github/workflows/: deploy.yml
src/: app.rs  main.rs  router.rs
src/components/: game_card.rs  mod.rs  theme_toggle.rs
src/pages/: about.rs  games.rs  home.rs  mod.rs  not_found.rs
static/: index.html  styles.css
