[package]
name = "flash_games_revived"
version = "0.1.0"
edition = "2021"
description = "A website to host Flash-like WASM games"
authors = ["You"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", features = [
  "HtmlCanvasElement",
  "Window", 
  "Document",
  "Element",
  "HtmlElement",
  "console"
]}
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"
gloo = "0.8"
stylist = { version = "0.12", features = ["yew"] }

# For future game integration
js-sys = "0.3"

# Router for SPA navigation
yew-router = "0.17"
